--- a/public/500.html
+++ b/public/500.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Něco se nám rozbilo (error 500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+
   <style>
-  .rails-default-error-page {
+  .error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -12,55 +14,32 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
   .rails-default-error-page h1 {
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
   }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
+<body class="error-page">
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>něco jsme rozbili</h1>
+      <p style="line-height: 2rem;">
+        Bohužel občas se něco rozbije, i když nikdo nechtěl.<br>
+        Není ale třeba plakat, snad se tolik nestalo!<br>
+        Víme o tom, a budeme se snažit o rychlou opravu<br>
+        Tak si aspoň užijte trochu umění, a pak se vraťte na <a href="/">začátek</a>.
+      </p>
+
+      <figure>
+        <p>
+          <img src="500_broken_small.jpeg" alt="Painting 'The broken dish'" style="width: 25%; padding: 4rem;">
+        </p>
+        <caption>The Broken Dish by Paul Seignac</caption>
+      </figure>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
