Change sizes, make image responsive

--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
 
   <style>
+
   .error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
@@ -18,6 +19,17 @@
     font-size: 100%;
     color: #730E15;
     line-height: 1.5em;
+  }
+
+  img {
+    width: 40%;
+  }
+
+  @media only screen and (max-width: 600px) {
+    img {
+      height: auto;
+      width: 80%;
+    }
   }
   </style>
 </head>
@@ -36,7 +48,7 @@
 
       <figure>
         <p>
-          <img src="404_kitchen_small.jpg" alt="Painting 'Still Life with Kitchen Utensils and Vegetables'" style="width: 80%; padding: 4rem;">
+          <img src="404_kitchen_small.jpg" alt="Painting 'Still Life with Kitchen Utensils and Vegetables'">
         </p>
         <caption>Still Life with Kitchen Utensils and Vegetables by Jean Siméon Chardin</caption>
       </figure>
