--- a/public/500.html
+++ b/public/500.html
@@ -19,6 +19,18 @@
     color: #730E15;
     line-height: 1.5em;
   }
+
+  img {
+    width: 25%;
+  }
+
+  @media only screen and (max-width: 600px) {
+    img {
+      height: auto;
+      width: 80%;
+    }
+  }
+
   </style>
 </head>
 
@@ -35,7 +47,7 @@
 
       <figure>
         <p>
-          <img src="500_broken_small.jpeg" alt="Painting 'The broken dish'" style="width: 25%; padding: 4rem;">
+          <img src="500_broken_small.jpeg" alt="Painting 'The broken dish'">
         </p>
         <caption>The Broken Dish by Paul Seignac</caption>
       </figure>
