Correct image sources on error pages

--- a/public/404.html
+++ b/public/404.html
@@ -48,7 +48,7 @@
 
       <figure>
         <p>
-          <img src="404_kitchen_small.jpg" alt="Painting 'Still Life with Kitchen Utensils and Vegetables'">
+          <img src="/404_kitchen_small.jpg" alt="Painting 'Still Life with Kitchen Utensils and Vegetables'">
         </p>
         <caption>Still Life with Kitchen Utensils and Vegetables by Jean Siméon Chardin</caption>
       </figure>
