--- a/public/500.html
+++ b/public/500.html
@@ -47,7 +47,7 @@
 
       <figure>
         <p>
-          <img src="500_broken_small.jpeg" alt="Painting 'The broken dish'">
+          <img src="/500_broken_small.jpeg" alt="Painting 'The broken dish'">
         </p>
         <caption>The Broken Dish by Paul Seignac</caption>
       </figure>
